Add update course add update unit

--- a/master/WebApplicationUI/Dashboard/index.html
+++ b/master/WebApplicationUI/Dashboard/index.html
@@ -78,7 +78,7 @@
 -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle nav-link" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
+                            <img src="../assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
                             <span class="hidden-md-down">admin</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
@@ -124,8 +124,12 @@
                     <li class="nav-title">
                         UI Elements
                     </li>
-                    <li class="nav-item nav-dropdown open">
-                        <a class="nav-link nav-dropdown-toggle"><i class="icon-puzzle"></i> Components</a>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle"  ng-click="addcourse()"><i class="icon-puzzle"></i> Add Courses </a>
+                        <a class="nav-link nav-dropdown-toggle" ng-click="addcourse()"><i class="icon-puzzle"></i> Update Courses </a>
+                        <a class="nav-link nav-dropdown-toggle"  ng-click="addcourse()"><i class="icon-puzzle"></i> Add Unit </a>
+                        <a class="nav-link nav-dropdown-toggle" ng-click="addcourse()"><i class="icon-puzzle"></i> Update Unit </a>
+<!--
                         <ul class="nav-dropdown-items">
                             <li class="nav-item">
                                 <a class="nav-link" href="course.html"><i class="icon-puzzle"></i> BUTTONS</a>
@@ -146,7 +150,9 @@
                                 <a class="nav-link" href="components-tables.html"><i class="icon-puzzle"></i> TABLES</a>
                             </li>
                         </ul>
+-->
                     </li>
+<!--
                     <li class="nav-item nav-dropdown">
                         <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-star"></i> ICONS</a>
                         <ul class="nav-dropdown-items">
@@ -234,6 +240,7 @@
                             </li>
                         </ul>
                     </li>
+-->
                 </ul>
             </nav>
         </div>
@@ -243,7 +250,7 @@
             <ol class="breadcrumb m-b-0">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Dashboard</a></li>
-<!--                <li class="active">Data</li>-->
+<!--                <li class="active">Add Unit</li>-->
             </ol>
             <div class="container-fluid">
                 <div class="animated fadeIn">
