--- a/master/WebApplicationUI/unit/addunit.html
+++ b/master/WebApplicationUI/unit/addunit.html
@@ -27,15 +27,18 @@
 		2. 'fixed-nav'			  - Fixed navigation
 		3. 'navbar-fixed'		  - Fixed navbar
 	-->
-    <body class="navbar-fixed sidebar-nav fixed-nav">
+     <body class="navbar-fixed sidebar-nav fixed-nav" ng-controller="coursectrl">
         <header class="navbar">
             <div class="container-fluid">
                 <button class="navbar-toggler mobile-toggler hidden-lg-up" type="button">&#9776;</button>
                 <a class="navbar-brand" href="#"></a>
                 <ul class="nav navbar-nav hidden-md-down">
+<!--
                     <li class="nav-item">
                         <a class="nav-link navbar-toggler layout-toggler" href="#">☰</a>
                     </li>
+-->
+<!--
                     <li class="nav-item p-x-1">
                         <a class="nav-link" href="#">Dashboard</a>
                     </li>
@@ -45,36 +48,44 @@
                     <li class="nav-item p-x-1">
                         <a class="nav-link" href="#">Settings</a>
                     </li>
+-->
                 </ul>
                 <ul class="nav navbar-nav pull-right hidden-md-down">
                     <li class="nav-item dropdown">
+
+<!--
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                             <img src="assets/img/flags/United-Kingdom.png" class="img-flag" alt="English">
                         </a>
+-->
                         <div class="dropdown-menu dropdown-menu-right">
                             <div class="dropdown-header text-xs-center">
                                 <strong>Choose language</strong>
                             </div>
-                            <a class="dropdown-item" href="#">
+                          <!--  <a class="dropdown-item" href="#">
                                 <img src="assets/img/flags/Poland.png" class="img-flag" alt="Polish"> Polish</a>
                             <a class="dropdown-item" href="#">
                                 <img src="assets/img/flags/United-Kingdom.png" class="img-flag" alt="English"> English</a>
                             <a class="dropdown-item" href="#">
-                                <img src="assets/img/flags/Spain.png" class="img-flag" alt="Espa&#xF1;ol"> Español</a>
+                                <img src="assets/img/flags/Spain.png" class="img-flag" alt="Espa&#xF1;ol"> Español</a>-->
                         </div>
+
                     </li>
+<!--
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="icon-bell"></i><span class="label label-pill label-danger">5</span></a>
                     </li>
+-->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
+                        <a class="nav-link dropdown-toggle nav-link" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">
+                            <img src="../assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
                             <span class="hidden-md-down">admin</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <div class="dropdown-header text-xs-center">
                                 <strong>Account</strong>
                             </div>
+<!--
                             <a class="dropdown-item" href="#"><i class="fa fa-bell-o"></i> Updates<span class="label label-info">42</span></a>
                             <a class="dropdown-item" href="#"><i class="fa fa-envelope-o"></i> Messages<span class="label label-success">42</span></a>
                             <a class="dropdown-item" href="#"><i class="fa fa-tasks"></i> Tasks<span class="label label-danger">42</span></a>
@@ -88,12 +99,15 @@
                             <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="label label-primary">42</span></a>
                             <div class="divider"></div>
                             <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock Account</a>
+-->
                             <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
                         </div>
                     </li>
+<!--
                     <li class="nav-item">
                         <a class="nav-link navbar-toggler aside-toggle" href="#">&#9776;</a>
                     </li>
+-->
                 </ul>
             </div>
         </header>
@@ -104,17 +118,21 @@
                         Dashboard
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><i class="icon-speedometer"></i> DASHBOARD <span class="label label-info">NEW</span></a>
+                        <a class="nav-link" href="Dashboard/index.html"><i class="icon-speedometer"></i> DASHBOARD <span class="label label-info">NEW</span></a>
                     </li>
                     <li class="divider"></li>
                     <li class="nav-title">
                         UI Elements
                     </li>
                     <li class="nav-item nav-dropdown">
-                        <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-puzzle"></i> Components</a>
+                        <a class="nav-link nav-dropdown-toggle"  ng-click="addcourse()"><i class="icon-puzzle"></i> Add Courses </a>
+                        <a class="nav-link nav-dropdown-toggle" ng-click="addcourse()"><i class="icon-puzzle"></i> Update Courses </a>
+                        <a class="nav-link nav-dropdown-toggle"  ng-click="addcourse()"><i class="icon-puzzle"></i> Add Unit </a>
+                        <a class="nav-link nav-dropdown-toggle" ng-click="addcourse()"><i class="icon-puzzle"></i> Update Unit </a>
+<!--
                         <ul class="nav-dropdown-items">
                             <li class="nav-item">
-                                <a class="nav-link" href="components-buttons.html"><i class="icon-puzzle"></i> BUTTONS</a>
+                                <a class="nav-link" href="course.html"><i class="icon-puzzle"></i> BUTTONS</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="components-social-buttons.html"><i class="icon-puzzle"></i> Social Buttons</a>
@@ -132,7 +150,9 @@
                                 <a class="nav-link" href="components-tables.html"><i class="icon-puzzle"></i> TABLES</a>
                             </li>
                         </ul>
+-->
                     </li>
+<!--
                     <li class="nav-item nav-dropdown">
                         <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-star"></i> ICONS</a>
                         <ul class="nav-dropdown-items">
@@ -220,6 +240,7 @@
                             </li>
                         </ul>
                     </li>
+-->
                 </ul>
             </nav>
         </div>
@@ -228,8 +249,8 @@
             <!-- Breadcrumb -->
             <ol class="breadcrumb m-b-0">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Library</a></li>
-                <li class="active">Data</li>
+                <li><a href="#">Dashboard</a></li>
+                <li class="active">Add Unit</li>
             </ol>
             <div class="container-fluid">
                 <div class="animated fadeIn">
@@ -237,7 +258,7 @@
                         <div class="col-md-6-offset-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <strong>Add</strong> Unit
+                                    <strong>Add Unit</strong> 
                                 </div>
                                 <div class="card-block">
                                     <form name="form" ng-submit="" role="form">
@@ -246,6 +267,13 @@
                                             <div class="col-md-9" ng-class="{ 'has-error': form.name.$dirty && form.name.$error.required }">
                                                 <input type="text" name="name" id="name" class="form-control" placeholder="Unit name" ng-model="topics.name" required />
                                                 <span ng-show="form.name.$dirty && form.name.$error.required" class="help-block">Unit name is required</span>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-md-3 form-control-label" for="text-input">Difficulty Level</label>
+                                            <div class="col-md-9" ng-class="{ 'has-error': form.difLevel.$dirty && form.difLevel.$error.required }">
+                                                <input type="text" name="difLevel" id="difLevel" class="form-control" placeholder="Unit name" ng-model="topics.difLevel" required />
+                                                <span ng-show="form.difLevel.$dirty && form.difLevel.$error.required" class="help-block">Unit name is required</span>
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -275,16 +303,11 @@
                                             <label class="col-md-3 form-control-label" for="textarea-input">Description</label>
                                             <div class="col-md-9">
                                                 <textarea name="desc" id="desc" class="form-control" placeholder="Topic Description.." ng-model="topics.desc" required></textarea>
+                                                 <span ng-show="form.desc.$dirty && form.desc.$error.required" class="help-block">Desc is required</span>
                                             </div>
                                         </div>
 
-                                        <div class="form-group row">
-                                            <label class="col-md-3 form-control-label" for="text-input">Unit Name</label>
-                                            <div class="col-md-9" ng-class="{ 'has-error': form.courseId.$dirty && form.courseId.$error.required }">
-                                                <input type="text" name="courseId" id="courseId" class="form-control" placeholder="Course Id" ng-model="topics.courseId" required />
-                                                <span ng-show="form.courseId.$dirty && form.courseId.$error.required" class="help-block">Course Id is required</span>
-                                            </div>
-                                        </div>
+                                       
                                         <div class="card-footer">
                                             <button type="submit" class="btn btn-sm btn-primary" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary" ng-click="submit()"><i class="fa fa-dot-circle-o"></i> Add</button>
                                             <a href="" class="btn btn-link"><button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button></a>
