--- a/master/WebApplicationUI/addGame/Addgame.html
+++ b/master/WebApplicationUI/addGame/Addgame.html
@@ -250,6 +250,15 @@
                                             </div>
                                         </div>
 
+                                        <div class="form-group row" ng-class="{ 'has-error': form.coursedesc.$dirty && form.coursedesc.$error.required }">
+                                            <label class="col-md-3 form-control-label" for="textarea-input">Game</label>
+                                            <div class="col-md-9">
+                                                <select class="form-control" size="1" ng-model="game.gameId" ng-options="games._id as games.title for games in game">
+                                                     <option style="display:none" value="">Games</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
                                         <div class="form-group row" ng-class="{ 'has-error': form.startTime.$dirty && form.startTime.$error.required }">
                                             <label class="col-md-3 form-control-label" for="sdate">Starting Date</label>
                                             <div class="col-md-9">
