--- a/master/WebApplicationUI/addGame/Addgame.html
+++ b/master/WebApplicationUI/addGame/Addgame.html
@@ -250,6 +250,17 @@
                                             </div>
                                         </div>
 
+                                            <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+                <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>
                                         <div class="form-group row" ng-class="{ 'has-error': form.startTime.$dirty && form.startTime.$error.required }">
                                             <label class="col-md-3 form-control-label" for="sdate">Starting Date</label>
                                             <div class="col-md-9">
