--- a/master/WebApplicationUI/course/addCourse.html
+++ b/master/WebApplicationUI/course/addCourse.html
@@ -15,7 +15,7 @@
         <meta name="author" content="Lukasz Holeczek">
         <meta name="keyword" content="LeafUI Admin - UI Admin Kit Powered by Bootstrap 4">
         <!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
-        <title>LeafUI Admin - UI Admin Kit</title>
+        <title>Course Game</title>
         <!-- Main styles for this application -->
         <link href="../assets/css/style.css" rel="stylesheet">
     </head>
