--- a/master/WebApplicationUI/index.html
+++ b/master/WebApplicationUI/index.html
@@ -36,6 +36,7 @@
         <script src="course/course.controller.js"></script>
         <script src="addGame/addGame.controller.js"></script>
         <script src="addGame/updategame.controller.js"></script>
+        <script scr="profile/updateProfile.controller.js"></script>
 <!--
         <script src="addGame/addGame.controller.js"></script>
         <script src="Dashboard/dashboard.controller.js"></script>
