--- a/master/WebApplicationUI/unit/updateunit.html
+++ b/master/WebApplicationUI/unit/updateunit.html
@@ -258,22 +258,22 @@
                         <div class="col-md-6-offset-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <strong>Add Unit</strong> 
+                                    <strong>Update Unit</strong> 
                                 </div>
                                 <div class="card-block">
                                     <form name="form" ng-submit="" role="form">
                                         <div class="form-group row">
                                             <label class="col-md-3 form-control-label" for="text-input">Unit Name</label>
-                                            <div class="col-md-9" ng-class="{ 'has-error': form.name.$dirty && form.name.$error.required }">
-                                                <input type="text" name="name" id="name" class="form-control" placeholder="Unit name" ng-model="topics.name" required />
+                                            <div class="col-md-9" ng-class="{ 'has-error': form.name.$dirty && form.name.$error.required &&!form.name.$pristine }">
+                                                <input type="text" name="name" id="name" class="form-control" placeholder="Unit name" ng-model="topics.name" ng-minlength="3" ng-maxlength="15" ng-pattern="/^(\D)+$/"required /> 
                                                 <span ng-show="form.name.$dirty && form.name.$error.required" class="help-block">Unit name is required</span>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-md-3 form-control-label" for="text-input">Difficulty Level</label>
                                             <div class="col-md-9" ng-class="{ 'has-error': form.difLevel.$dirty && form.difLevel.$error.required }">
-                                                <input type="text" name="difLevel" id="difLevel" class="form-control" placeholder="Unit name" ng-model="topics.difLevel" required />
-                                                <span ng-show="form.difLevel.$dirty && form.difLevel.$error.required" class="help-block">Unit name is required</span>
+                                                <input type="text" name="difLevel" id="difLevel" class="form-control" placeholder="Difficulty" ng-model="topics.difLevel" required />
+                                                <span ng-show="form.difLevel.$dirty && form.difLevel.$error.required" class="help-block">Difficulty Level is required</span>
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -302,7 +302,7 @@
                                         <div class="form-group row">
                                             <label class="col-md-3 form-control-label" for="textarea-input">Description</label>
                                             <div class="col-md-9">
-                                                <textarea name="desc" id="desc" class="form-control" placeholder="Topic Description.." ng-model="topics.desc" required></textarea>
+                                                <textarea name="desc" id="desc" class="form-control" placeholder="Topic Description.." ng-model="topics.desc" ng-minlength="5" ng-maxlength="125" ng-pattern="/^\s*\w*\s*$/" required></textarea>
                                                  <span ng-show="form.desc.$dirty && form.desc.$error.required" class="help-block">Desc is required</span>
                                             </div>
                                         </div>
