--- a/master/WebInterface/index.html
+++ b/master/WebInterface/index.html
@@ -3,8 +3,8 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="https://unpkg.com/angular-ui-router@0.3.1/release/angular-ui-router.js"></script>
-<script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
-<script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload-shim.min.js"></script>
+<script type="text/javascript" src="js/ng-file-upload.min.js"></script>
+<script type="text/javascript" src="js/ng-file-upload-shim.min.js"></script>
 
 <script type='text/javascript' src='/js/ngStorage.min.js'></script>
 
