--- a/master/WebApplicationUI/Dashboard/index2.html
+++ b/master/WebApplicationUI/Dashboard/index2.html
@@ -15,7 +15,7 @@
         <meta name="author" content="Lukasz Holeczek">
         <meta name="keyword" content="LeafUI Admin - UI Admin Kit Powered by Bootstrap 4">
         <!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
-        <title>LeafUI Admin - UI Admin Kit</title>
+        <title>Course Game</title>
         <!-- Main styles for this application -->
         <link href="assets/css/style.css" rel="stylesheet">
     </head>
@@ -1412,11 +1412,6 @@
                 </div>
             </div>
         </aside>
-        <footer class="footer ng-scope">
-            <span class="pull-right text-muted">
-                <a href="http://bootstrapmaster.com">LeafUI</a> © 2016 creativeLabs. Powered by <a href="http://GenesisUI.com">GenesisUI</a>
-            </span>
-        </footer>
         <!-- Bootstrap and necessary plugins -->
         <script src="assets/js/libs/jquery.min.js"></script>
         <script src="assets/js/libs/tether.min.js"></script>
