--- a/master/WebApplicationUI/addGame/updategame.html
+++ b/master/WebApplicationUI/addGame/updategame.html
@@ -231,7 +231,7 @@
                         <div class="col-md-6-offset-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <strong>Add</strong> Game
+                                    <strong>Update</strong> Game
                                 </div>
                                 <form name="form" ng-submit="vm.addgame()" role="form" ng-controller="addGamectrl">
                                 <div class="card-block">
