--- a/master/WebApplicationUI/index.html
+++ b/master/WebApplicationUI/index.html
@@ -38,7 +38,8 @@
         <script src="course/course.controller.js"></script>
         <script src="addGame/addGame.controller.js"></script>
         <script src="addGame/updategame.controller.js"></script>
-        <script scr="profile/updateProfile.controller.js"></script>
+        <script src="profile/updateProfile.controller.js"></script>
+        <script src="Notification/notification.controller.js"></script>
 <!--
         <script src="addGame/addGame.controller.js"></script>
         <script src="Dashboard/dashboard.controller.js"></script>
