--- a/master/WebApplicationUI/course/addCourse.html
+++ b/master/WebApplicationUI/course/addCourse.html
@@ -271,8 +271,8 @@
                                     <div class="form-group row">
                                             <label class="col-md-3 form-control-label" for="text-input">Course Name </label>
                                             <div class="col-md-9" ng-class="{ 'has-error': form.courseName.$dirty && form.courseName.$error.required && !form.courseName.$pristine}">
-                                                <input type="text" name="courseName" id="courseName" class="form-control" placeholder="Enter Course Name" ng-model="cs.name" ng-minlength="3" ng-maxlength="30" ng-pattern="/^\s*\w*\s*$/" required>
-                                                 <span ng-show="form.courseName.$dirty && form.courseName.$error.required" class="help-block">Course Name is required</span> 
+                                                <input type="text" name="courseName" id="courseName" class="form-control" placeholder="Enter Course Name" ng-model="cs.name" ng-minlength="3" ng-maxlength="50" ng-pattern="/^\s*\w*\s*$/" required>
+                                                 <span ng-show="form.courseName.$dirty && form.courseName.$error.required" class="help-block">Course Name should be maximum 50 characters and minimum 3 characetrs and is required.</span> 
                                             </div>
                                         </div>
                                         
