--- a/master/WebApplicationUI/login/pages-login.html
+++ b/master/WebApplicationUI/login/pages-login.html
@@ -22,7 +22,6 @@
         <link href="../assets/css/style.css" rel="stylesheet">
     </head>
     <body class="">
-        <form  id="loginForm" method="post">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -51,7 +50,7 @@
 										</div>
                                 <div class="row">
                                     <div class="col-xs-6">
-                                        <button type="button" class="btn btn-primary p-x-2" ng-click="submit();save()">Login</button>
+                                        <button type="button" class="btn btn-primary p-x-2" ng-click="submit();">Login</button>
                                     </div>
                                     <div class="col-xs-6 text-xs-right">
                                        <button type="button" class="btn btn-link p-x-0" data-toggle="collapse" data-target="#email">Forgot password?</button>
@@ -91,7 +90,7 @@
                 </div>
             </div>
         </div>
-            	</form>
+            	
         <!-- Bootstrap and necessary plugins -->
         <script src="assets/js/libs/jquery.min.js"></script>
         <script src="assets/js/libs/tether.min.js"></script>
