--- a/master/WebApplicationUI/course/addCourse.html
+++ b/master/WebApplicationUI/course/addCourse.html
@@ -354,11 +354,11 @@
             </div>
         </div>  
         </main>
-        <footer class="footer ng-scope">
+       <!--  <footer class="footer ng-scope">
             <span class="pull-right text-muted">
                 <a href="http://bootstrapmaster.com">LeafUI</a> © 2016 creativeLabs. Powered by <a href="http://GenesisUI.com">GenesisUI</a>
             </span>
-        </footer>
+        </footer> -->
         <!-- Bootstrap and necessary plugins -->
         <script src="../assets/js/libs/jquery.min.js"></script>
         <script src="../assets/js/libs/tether.min.js"></script>
