--- a/master/WebApplicationUI/course/viewCourse.html
+++ b/master/WebApplicationUI/course/viewCourse.html
@@ -260,7 +260,7 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header card-primary">
-                                   <h5>{{topic.name}}   <button type="button" class="btn btn-success fa fa-plus pull-right" ng-click="addUnit(topics._id)" style="float:right"> Add Unit</button></h5>
+                                   <h5>{{topic.name}}   <button type="button" class="btn btn-success fa fa-plus pull-right" ng-click="unitUpdate(topic._id)" style="float:right"> Update Unit</button></h5>
                                 </div>
                                  <div class="card-block">
                                      <Strong> Unit Description </Strong>
