--- a/master/WebApplicationUI/index.html
+++ b/master/WebApplicationUI/index.html
@@ -32,13 +32,15 @@
 <script type="text/javascript" src="bower_components/angular/angular-moment.js"></script>
         
         <script src="assets/js/custom/app.js"></script>
-<script src="login/login.controller.js"></script>
+        <script src="login/login.controller.js"></script>
         <script src="register/register.controller.js"></script>
         <script src="Dashboard/dashboard.controller.js"></script>
         <script src="course/course.controller.js"></script>
         <script src="addGame/addGame.controller.js"></script>
         <script src="addGame/updategame.controller.js"></script>
-        <script scr="profile/updateProfile.controller.js"></script>
+        <script src="profile/updateProfile.controller.js"></script>
+        <script src="unit/unit.controller.js"></script>
+        <script src="unit/updateunit.controller.js"></script>
 <!--
         <script src="addGame/addGame.controller.js"></script>
         <script src="Dashboard/dashboard.controller.js"></script>
